backend/tests/snapshots/test__original_test.snap
---
source: tests/test.rs
---
Black plays at (0, 0) and spins from (0, 0) 1 tiles CW... => Ok(None)
                                                                                                                
   ┌─────┬─────┬─────┬─────┬─────┬─────┬─────┬─────┐     ╶─[1m[96m→[22m01[39;49m ╶──┬─────┬─────┬─────┬─────┬─────┬─────┬─────┐   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤        ├─────┼─────┼─────┼─────┼─────┼─────┼─────┼─────┤   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   │     │     │     │     │     │     │     │     │        │     │     │     │     │     │     │     │     │   
   └─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘        └─────┴─────┴─────┴─────┴─────┴─────┴─────┴─────┘   
                                                                                                                
[0m   Black to play...                                      [0m   White to play...
   Need 2 to win.                                           Need 2 to win.
